include old styles and fix resulting overlaps

--- a/app/styles/app/layouts/sidebar.sass
+++ b/app/styles/app/layouts/sidebar.sass
@@ -68,8 +68,10 @@ $sb-font-size: 14px
     &:after
       transform: translateX(35%)
       display: inline-block
-  a:hover .icon--plus:after
-    color: $teal1
+  a:hover
+    bottom: 0.05em
+    .icon--plus:after
+      color: $teal1
 
 .sidebar-list
   margin-top: 1.4rem
